# wifi-signal-applet

./: AUTHORS  Makefile.am  antigen.sh  autogen.sh  configure.ac
data/: Makefile.am  wifi-signal-applet.desktop  wifi-signal-cpa.desktop
debian/: changelog  control  copyright  gbp.conf  postinst.in  postrm.in  prerm.in  rules  schemas.in
src/: Makefile.am  gconf-keys.h  icd2-stats-sig-marshal.list  utils.c  utils.h  wifi-signal-applet.c  wifi-signal-cpa.c
